external-ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  namespace: external-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/auth-url: "http://guac-outpost:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.crust.life/outpost.goauthentik.io/start?rd=$escaped_request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - remote.crust.life
    secretName: remote-tls
  rules:
  - host: remote.crust.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: internal-ingress
            port:
              number: 443
